# data-boxes

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  README.md  WORKSPACE  go.mod  pom.xml
.github/workflows/: main.yml
.ijwb/: .bazelproject
authorizer/: BUILD.bazel  main.go  module.go  server.go
authorizer/policies/: rbac.rego
java-wrappers/: BUILD.bazel  pom.xml
java-wrappers/src/main/java/com/joek/databoxes/: AuthorizerClient.java  DataBox.java  Main.java  Wrapper.java
proto/authorizer/: BUILD.bazel  authorizer.proto
src/main/java/com/joek/databoxes/: DataBox.java  Main.java
