load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "authorizer",
    srcs = ["server.go"],
    importpath = "github.com/joekir/data-boxes/authorizer",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/authorizer",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//types/known/wrapperspb:go_default_library",
    ],
)
