java_library(
    name = "boxes",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = [
        # http://manifold.systems/docs.html#download
        "-Xplugin:Manifold",
    ],
    deps = [
        "@maven//:systems_manifold_manifold_ext",
        "@maven//:systems_manifold_manifold_ext_rt",
    ],
)

java_binary(
    name = "foo",
    main_class = "com.joek.databoxes.Main",
    runtime_deps = [":boxes"],
)
