load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

java_plugin(
    name = "manifold_plugin",
    deps = [
        "@maven//:systems_manifold_manifold_ext",
        "@maven//:systems_manifold_manifold_ext_rt",
    ],
)

java_library(
    name = "boxes",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = [
        # http://manifold.systems/docs.html#download
        "'-Xplugin:Manifold'",
    ],
    plugins = [
        ":manifold_plugin",
    ],
    runtime_deps = [
        "@io_grpc_grpc_java//netty",
    ],
    deps = [
        "//proto/authorizer:authorizer_java_grpc",
        "@com_google_protobuf//:protobuf_java",
        "@com_google_protobuf//:protobuf_java_util",
        "@io_grpc_grpc_java//api",
        "@io_grpc_grpc_java//protobuf",
        "@io_grpc_grpc_java//stub",
        "@maven//:com_google_api_grpc_proto_google_common_protos",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_guava_guava",
        "@maven//:io_grpc_grpc_protobuf",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:systems_manifold_manifold_ext",
        "@maven//:systems_manifold_manifold_ext_rt",
    ],
)

java_binary(
    name = "example",
    main_class = "com.joek.databoxes.Main",
    runtime_deps = [
        ":boxes",
    ],
)
