load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "servicepb_proto",
    srcs = ["authorizer.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:wrappers_proto"],
)

go_proto_library(
    name = "servicepb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/joekir/data-boxes/proto/authorizer",
    proto = ":servicepb_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "authorizer",
    embed = [":servicepb_go_proto"],
    importpath = "github.com/joekir/data-boxes/proto/authorizer",
    visibility = ["//visibility:public"],
)
