load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

proto_library(
    name = "authorizer_proto",
    srcs = ["authorizer.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:wrappers_proto"],
)

java_proto_library(
    name = "authorizer_java_proto",
    deps = [":authorizer_proto"],
)

java_grpc_library(
    name = "authorizer_java_grpc",
    srcs = [":authorizer_proto"],
    visibility = ["//visibility:public"],
    deps = [":authorizer_java_proto"],
)

go_proto_library(
    name = "authorizer_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/joekir/data-boxes/proto/authorizer",
    proto = ":authorizer_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "authorizer",
    embed = [":authorizer_go_proto"],
    importpath = "github.com/joekir/data-boxes/proto/authorizer",
    visibility = ["//visibility:public"],
)
